<resources>
    <string name="app_name">Kick the Ball</string>
    <string name="by_new_ball">By new ball</string>
    <string name="start_game">Start game</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="ball">Select Ball</string>
    <string name="simple_ball">Simple ball</string>
    <string name="price_0">Price: 0</string>
    <string name="price_250">Price: 250</string>
    <string name="price_500">Price: 500</string>
    <string name="super_ball">Super ball</string>
    <string name="green_ball">Green ball</string>
    <string name="purple_ball">Purple ball</string>
    <string name="price_1000">Price: 1000</string>
    <string name="load_animation">Load animation</string>
    <string name="score">Score: 0</string>
    <string name="restart_game">Restart game</string>
    <string name="icon">Icon</string>
    <string name="heart">Heart</string>
    <string name="save">Save</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="point">Point:</string>
    <string name="cherry_color_bal">Cherry color bal</string>
    <string name="buy_bal">Buy bal</string>

</resources>