<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/il_fon">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/il_red_chip"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stat_game"
        android:layout_width="@dimen/text_menu_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_style"
        android:padding="@dimen/text_padding"
        android:text="@string/start_game"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_menu_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/tv_shop"
        android:layout_width="@dimen/text_menu_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:padding="@dimen/text_padding"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_menu_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stat_game" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="@dimen/text_menu_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:padding="@dimen/text_padding"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_menu_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shop" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:padding="@dimen/text_padding"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_menu_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>