<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_back_crick">

    <ImageView
        android:id="@+id/iv_ball"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="20dp"
        android:src="@mipmap/il_ball"
        android:translationY="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ball" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/iv_heart_one"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/il_black_heart"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/iv_heart_two"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/il_black_heart"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/iv_heart_three"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/il_black_heart"
            android:contentDescription="@string/heart" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_menu_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/alert_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_black_foreground"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_alert_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_style"
            android:padding="@dimen/text_padding"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="@dimen/text_menu_size" />

        <TextView
            android:id="@+id/tv_alert_restart_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_style"
            android:padding="@dimen/text_padding"
            android:text="@string/restart_game"
            android:textColor="@color/black"
            android:textSize="@dimen/text_menu_size" />

        <TextView
            android:id="@+id/tv_alert_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_style"
            android:padding="@dimen/text_padding"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="@dimen/text_menu_size" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>